[project]
name = "comfyui-diversityboost"
description = "Restore composition diversity for distilled diffusion models. Training-free, single-step, zero model modification."
version = "3.0.1"
license = "MIT"
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/facok/ComfyUI-DiversityBoost"

[tool.comfy]
PublisherId = "fok2026"
DisplayName = "DiversityBoost"
Icon = ""
